[gd_scene load_steps=2 format=3 uid="uid://cfmq3axhj1kv3"]

[ext_resource type="Script" path="res://game/scripts/ui/SettingsUI.gd" id="1_script"]

[node name="SettingsUI" type="CanvasLayer"]
layer = 100
script = ExtResource("1_script")

[node name="Dimmer" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -100.0
offset_right = 140.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 10.0
offset_top = 5.0
offset_right = 270.0
offset_bottom = 25.0
text = "Settings"
horizontal_alignment = 1

[node name="OptionsContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 35.0
offset_right = 260.0
offset_bottom = 190.0

[node name="MusicRow" type="HBoxContainer" parent="Panel/OptionsContainer"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="Panel/OptionsContainer/MusicRow"]
layout_mode = 2
size_flags_horizontal = 2
text = "Music"

[node name="MusicSlider" type="HSlider" parent="Panel/OptionsContainer/MusicRow"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 100.0
value = 100.0
step = 5.0

[node name="MusicValue" type="Label" parent="Panel/OptionsContainer/MusicRow"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "100%"
horizontal_alignment = 2

[node name="SFXRow" type="HBoxContainer" parent="Panel/OptionsContainer"]
layout_mode = 2

[node name="SFXLabel" type="Label" parent="Panel/OptionsContainer/SFXRow"]
layout_mode = 2
size_flags_horizontal = 2
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="Panel/OptionsContainer/SFXRow"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 100.0
value = 100.0
step = 5.0

[node name="SFXValue" type="Label" parent="Panel/OptionsContainer/SFXRow"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "100%"
horizontal_alignment = 2

[node name="TouchRow" type="HBoxContainer" parent="Panel/OptionsContainer"]
layout_mode = 2

[node name="TouchLabel" type="Label" parent="Panel/OptionsContainer/TouchRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Touch Controls"

[node name="TouchSizeLabel" type="Label" parent="Panel/OptionsContainer/TouchRow"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Medium"
horizontal_alignment = 2

[node name="TextRow" type="HBoxContainer" parent="Panel/OptionsContainer"]
layout_mode = 2

[node name="TextLabel" type="Label" parent="Panel/OptionsContainer/TextRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Text Size"

[node name="TextSizeLabel" type="Label" parent="Panel/OptionsContainer/TextRow"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Medium"
horizontal_alignment = 2

[node name="ColorblindRow" type="HBoxContainer" parent="Panel/OptionsContainer"]
layout_mode = 2

[node name="ColorblindRowLabel" type="Label" parent="Panel/OptionsContainer/ColorblindRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Colorblind"

[node name="ColorblindLabel" type="Label" parent="Panel/OptionsContainer/ColorblindRow"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "None"
horizontal_alignment = 2

[node name="DyslexiaRow" type="HBoxContainer" parent="Panel/OptionsContainer"]
layout_mode = 2

[node name="DyslexiaRowLabel" type="Label" parent="Panel/OptionsContainer/DyslexiaRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Dyslexia Font"

[node name="DyslexiaLabel" type="Label" parent="Panel/OptionsContainer/DyslexiaRow"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Off"
horizontal_alignment = 2

[node name="ReducedMotionRow" type="HBoxContainer" parent="Panel/OptionsContainer"]
layout_mode = 2

[node name="ReducedMotionRowLabel" type="Label" parent="Panel/OptionsContainer/ReducedMotionRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Reduced Motion"

[node name="ReducedMotionLabel" type="Label" parent="Panel/OptionsContainer/ReducedMotionRow"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Off"
horizontal_alignment = 2

[node name="OneHandedRow" type="HBoxContainer" parent="Panel/OptionsContainer"]
layout_mode = 2

[node name="OneHandedRowLabel" type="Label" parent="Panel/OptionsContainer/OneHandedRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "One-Handed Mode"

[node name="OneHandedLabel" type="Label" parent="Panel/OptionsContainer/OneHandedRow"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Off"
horizontal_alignment = 2

[node name="LanguageRow" type="HBoxContainer" parent="Panel/OptionsContainer"]
layout_mode = 2

[node name="LanguageRowLabel" type="Label" parent="Panel/OptionsContainer/LanguageRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Language"

[node name="LanguageLabel" type="Label" parent="Panel/OptionsContainer/LanguageRow"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "English"
horizontal_alignment = 2

[node name="Spacer" type="Control" parent="Panel/OptionsContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="CreditsButton" type="Button" parent="Panel/OptionsContainer"]
layout_mode = 2
text = "Credits"

[node name="BackButton" type="Button" parent="Panel/OptionsContainer"]
layout_mode = 2
text = "Back"
